fixed timeline indicator being too short

--- a/visualizer/src/style/_timeline.scss
+++ b/visualizer/src/style/_timeline.scss
@@ -48,7 +48,7 @@ $tl-height: 15px;
 }
 
 #timeline-moment-indicator-canvas {
-    height: 15px;
+    height: 30px;
     width: 100%;
     display: block;
 }
